crates/linear_ty/tests/compile_fail/must_use.rs
#![deny(warnings)]

use linear_ty::LinearString;

fn main() {
    LinearString::new("Test".to_string());
}
